--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
-@import "_reset.scss";
+@import "reset";
 @import "comments";
 @import "font-awesome";
-
+@import "user";
+@import "config/colors";
+@import "modules/flash";
+@import "modules/group";
