--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -4,30 +4,30 @@
   .chat-side
     .chat-side__header
       .chat-side__header__box
-        %p arinkocom
+        = current_user.name
         .chat-side__header__box__menu
           %li.list
             = link_to new_group_path do
               = fa_icon 'pencil-square-o', class: 'icon'
           %li.list
-            =link_to do
-              = fa_icon 'cog'
+            = link_to edit_user_path(current_user) do
+              = fa_icon 'cog', class: 'icon'
     .groups
       .group
         .group__title
-          ggg
+          グループ名
         .group__message
-          こんにちは
+          新着メッセージ
       .group
         .group__title
-          www
+          グループ名
         .group__message
-          よろしく
+          新着メッセージ
       .group
         .group__title
-          ooo
+          グループ名
         .group__message
-          さようなら
+          新着メッセージ
         
   .chat-main
     .main-header
@@ -42,19 +42,19 @@
       .message
         .message-box
           .message-box__name
-            arinkocom
+            メンバー
           .message-box__time
             2019.10.08
         .massage__taxt
-          おはよ
+          メッセージ
       .message
         .message-box
           .message-box__name
-            arinkocom
+            メンバー
           .message-box__time
             2019.10.08
         .massage__taxt
-          おはよ     
+          メッセージ  
     .form
       .input-box
         .input-box__btn
@@ -65,3 +65,7 @@
             %label.upload-label{for: "upload-icon"}
               %i.fa.fa-picture-o
               %input.hidden{type: 'file', id:'upload-icon'}
+
+
+          
+
