--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -6,14 +6,19 @@
   text-align-last: center;
   position:fixed;
   z-index: 1;
-}  
-.chat-side{
+} 
+.wrapper {
   height: 100vh;
-  width: 300px;
-  color: #000;
-  margin: 0;
-  padding-top: 24px;
-  float: left;
+  width: 100vw;
+  position: fixed;
+
+  .side-bar{
+    height: 100vh;
+    width: 300px;
+    color: #000;
+    margin: 0;
+    padding-top: 0px;
+    float: left;
   &__header {
     background-color: #253141;
     height: 100px;
@@ -25,7 +30,8 @@
       width: 260px;
       height: 24px;
       display: flex;
-      &__menu {
+      
+      &__list {
         display: inline;
         padding-left: 140px;
         .list {
@@ -33,16 +39,12 @@
         }
         .list a{
           color: #FFFFFF;
-        }
-            
-          
-        
-      
+        }       
       }
-   }
     }
+  }
 }
-.groups {
+  .groups {
   background-color:#2F3E51;
   height: calc(100% - 100px);
   padding: 0 20px;
@@ -60,13 +62,13 @@
       margin: 5px;
     }
   }
-}
+  }
 
 .chat-main{
   height:100vh;
   width: calc(100vw - 300px);
   float: left;
-  margin-top: 24px;
+  margin-top: 0px;
   .main-header{
     padding: 0 40px;
     border-bottom: solid 1px #eeeeee;
@@ -119,7 +121,7 @@
   }
   .form{
     background-color: #DDDDDD;
-    padding: 20px 20px;
+    padding: 20px 20px ;
     .input-box {
       background-color:#DDDDDD; 
       height: 50px;
@@ -160,6 +162,7 @@
         .hidden{
           display: none;
         }
+      }
     }
-  }
-}
+  }  
+} 
