--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,33 +1,5 @@
 .wrapper
-  -# = render 'shared/side_bar'
-  .chat-side
-    .chat-side__header
-      .chat-side__header__box
-        %p arinkocom
-        .chat-side__header__box__menu
-          %li.list
-            = link_to new_group_path do
-              = fa_icon 'edit'
-          %li.list
-            =link_to do
-              = fa_icon 'cog'
-    .groups
-      .group
-        .group__title
-          ggg
-        .group__message
-          こんにちは
-      .group
-        .group__title
-          www
-        .group__message
-          よろしく
-      .group
-        .group__title
-          ooo
-        .group__message
-          さようなら
-        
+  = render 'shared/side_bar'
   .chat-main
     .main-header
       .main-header__btn
