--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,14 +1,15 @@
 .side-bar
-  .header
-    %h3.header__name
+  .side-bar__header
+    %h3.side-bar__header__name
       = current_user.name
-    %ul.header__lists
-      %li.list
-        = link_to new_group_path do
-          = fa_icon 'pencil-square-o', class: 'icon'
-      %li.list
-        = link_to edit_user_path(current_user) do
-          = fa_icon 'cog', class: 'icon'
+      .side-bar__header__box
+        %ul.side-bar__header__box__lists
+          %li.side-bar__header__list
+          = link_to new_group_path do
+            = fa_icon 'pencil-square-o', class: 'icon'
+          %li.side-bar__header__list
+          = link_to edit_user_path(current_user) do
+            = fa_icon 'cog', class: 'icon'
   .groups
     - current_user.groups.each do |group|
       .group
