--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,6 +1,6 @@
 .chat-group-form
   %h1 チャットグループ編集
-  = render 'form', { group: @groupd }
+  = render 'groups/form', { group: @groupd }
   %form#edit_chat_group_22.edit_chat_group{"accept-charset" => "UTF-8", :action => "/chat_groups/22", :method => "post"}
     .chat-group-form__errors
       %h2
