--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,14 +1,14 @@
-.side-bar
-  .side-bar__header
-    %h3.side-bar__header__name
-      = current_user.name
-      %ul.side-bar__header__name__box__lists
-        %li.side-bar__header__list
-          = link_to new_group_path do
-            = fa_icon 'pencil-square-o', class: 'icon'
-        %li.side-bar__header__list
-          = link_to edit_user_path(current_user) do
-            = fa_icon 'cog', class: 'icon'
+.sidebar
+  .header
+    .header__name
+      =current_user.name
+    %ul.header__link
+      %li.list
+        = link_to new_group_path do
+          = fa_icon 'pencil-square-o', class: 'icon'
+      %li.list
+        = link_to edit_user_path(current_user) do
+          = fa_icon 'cog', class: 'icon'
   .groups
     - current_user.groups.each do |group|
       .group
@@ -16,4 +16,4 @@
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません。
+            = group.show_last_message
