--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -19,6 +19,7 @@
     margin: 0;
     padding-top: 0px;
     float: left;
+    overflow:scroll;
     .header{
       background-color: #253141;
       height: 100px;
@@ -112,11 +113,13 @@
     }
 
   .messages{
+    
     background-color: #fafafa;
     color: #434A54;
     height: calc(100% - 190px);
     width: 100%;
     padding: 0 40px 0 40px;
+    overflow:scroll;
     .message{
       padding: 40px 0 10px 0;
       .upper-message{
@@ -153,10 +156,11 @@
       color: #434A54;
       font-size: 16px;
       height: 50px;
-      width: 930px;
+      width: 1300px;
       position: relative;
       float: left;
       width: calc(100%-150px);
+
     }
     &__mask {
       height: 50px;
@@ -166,6 +170,7 @@
         position: absolute;
         right: 20px;
         top: 17px;
+
         .icon{
           float:right;
           display: inline;
