--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -23,10 +23,13 @@
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
       .chat-group-users.js-add-user
-        .chat-group-user.clearfix.js-chat-member#chat-group-user-8
-          %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
-          %p.chat-group-user__name= current_user.name
-        
+        - @group.users.each do |user|
+          .chat-group-user.clearfix.js-chat-member#chat-group-user-8
+            %input{name: "group[user_ids][]", type: "hidden", value: user.id}
+            %p.chat-group-user__name= user.name
+            - if current_user.name != user.name
+              .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+
       / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
       -# = f.collection_check_boxes :user_ids, User.all, :id, :name
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
