--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -124,9 +124,9 @@
     overflow:scroll;
     .message{
       padding: 40px 0 10px 0;
-      .upper-message{
+      // .upper-message{
 
-      }
+      // }
         .upper-message__user-name{
             color: #434A54;
             font-size: 20px;
@@ -138,9 +138,9 @@
             padding-top: 10px;
             padding-left: 110px;
         }
-      .lower-message__content{
+      // .lower-message__content{
           
-      }
+      // }
     }
       
   }
