--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,15 +3,17 @@
   .chat-main
     .chat-main-header
       = link_to "Edit", edit_group_path(@group), class: 'chat-main-header__btn' 
-      .chat-main-header__name
-        gggg
+      .chat-main-header__name{id: @group.id}
+        = @group.name
       .chat-main-header__member
         Member 
+        - @group.users.each do |user|
+          = user.name
     .messages
       = render @messages
     .form
       = form_for [@group, @message],id: "new__message" do |f|
-        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        = f.text_field :content, class: 'form__message', placeholder: '  type a message'
         
         .form__mask
           = f.label :image, class: 'form__mask__image' do
