--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -143,9 +143,11 @@
           .upper-message__date{
               color: #999999;
               font-size: 12px;
-              padding-top: 10px;
+              padding-top: 5px;
+              padding-bottom: 10px;
               //padding-left: 110px;
-              margin-left: 20px; 
+              margin-left: 10px; 
+              float: left;
           }
         }
         .lower-message{
